# flops-counter.pytorch

./: .flake8  .gitignore  .isort.cfg  .travis.yml  CHANGELOG.md  LICENSE  README.md  flops_counter.py  ptflops_bert.py  pyproject.toml  sample.py  setup.py  test_requirements.txt
.github/workflows/: main.yaml  publish.yaml
ptflops/: __init__.py  aten_engine.py  aten_ops.py  flops_counter.py  pytorch_engine.py  pytorch_ops.py  utils.py
samples/: bert.py  classification.py
tests/: common_test.py
